--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -317,8 +317,8 @@
                                                     readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="masterInspections.inspectionOutcome.outcome" caption="Outcome" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
-                                                    <wm-grid-action key="addNewRow" display-name="Request Inspection" show="bind:Variables.CurrentForm.firstRecord.formStatuses.allowInspections" class="btn-primary" iconclass="wi wi-plus"
-                                                    title="Request Inspection" action="Widgets.dialogInspectionRequest.open()" shortcutkey="" disabled="false"></wm-grid-action>
+                                                    <wm-grid-action key="addNewRow" display-name="Request Inspection" show="bind:Variables.CurrentForm.firstRecord.formStatuses.allowInspections||Variables.svUserPermissions.dataSet.isEmployee||Variables.svUserPermissions.dataSet.isAdmin"
+                                                    class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()" shortcutkey="" disabled="false"></wm-grid-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.svUserPermissions.dataSet.isEmployee || Variables.svUserPermissions.dataSet.isAdmin" class="btn-transparent"
                                                     iconclass="wi wi-trash" title="Delete" action="Variables.lvDeleteFormsToInspections.deleteRecord()" disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
