--- a/src/main/webapp/pages/TomorrowInspections/TomorrowInspections.html
+++ b/src/main/webapp/pages/TomorrowInspections/TomorrowInspections.html
@@ -1,4 +1,4 @@
-<wm-page data-ng-controller="TodayInspectionsPageController" pagetitle="Today Inspections" name="page1">
+<wm-page data-ng-controller="TomorrowInspectionsPageController" pagetitle="Tomorrow Inspections" name="page1">
     <wm-header content="header" name="header1"></wm-header>
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
