updated explanatory user text for fields and statuses to reflect new behavior Files modified - [EditForm.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -324,10 +324,16 @@
                             </wm-tabpane>
                             <wm-tabpane name="tabpaneFormFields" title="Fields">
                                 <wm-layoutgrid name="layoutgrid13">
-                                    <wm-gridrow name="gridrow56_1">
+                                    <wm-gridrow name="gridrow56_1" padding="unset unset 1em unset">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn81_1">
-                                            <wm-label padding="unset 0.5em" name="label16" caption="Form Fields are used to collect information and guide a user who is submitting this Form. A minimum of one Form Field is required."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label16" caption="Form Fields are used to collect information and guide a user who is submitting this form design. A minimum of one form field is required."></wm-label>
                                             <wm-label padding="unset 0.5em" name="label19" caption="What data would you like to collect?"></wm-label>
+                                        </wm-gridcolumn>
+                                    </wm-gridrow>
+                                    <wm-gridrow name="gridrow83_1">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn112_2">
+                                            <wm-label padding="unset 0.5em" name="label33_1" caption="Please note: there are three fields created by default on new form designs, that are linked to the &quot;Automatic Fees&quot; on the Settings tab- &quot;Total Square Feet (100)&quot;, &quot;Total Units (101)&quot;, and &quot;Has Basement (102)&quot;."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label36" caption="You can change the display order of these fields, but if they are deleted, the associated &quot;Automatic Fees&quot; will no longer be generated when the form is submitted."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow57">
@@ -357,8 +363,10 @@
                                 <wm-layoutgrid name="layoutgrid14">
                                     <wm-gridrow name="gridrow58">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn85">
-                                            <wm-label padding="unset 0.5em" name="label17" caption="Form Statuses are the steps that a form takes while being processed, from submission to completion. &quot;Draft&quot; and &quot;Submitted&quot; are included by default, and a minimum of two Form Statuses are required."></wm-label>
-                                            <wm-label padding="unset 0.5em" name="label18" caption="Use the Edit icon to view the Form Status Options and control how you would like this Form Design to be processed by your Municipality."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label17" caption="Form Statuses are the steps that a form takes while being processed, from submission to completion."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label34" caption="Users can save their form as a draft first, or they can submit them directly to the municipality which will move them into the first form status in the list below."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label35" caption="&quot;Submitted&quot; is the first status provided by default on new form types, and a minimum of one form status is required."></wm-label>
+                                            <wm-label padding="unset 0.5em" name="label18" caption="Use the &quot;Edit&quot; icon to view the Form Status Options and control how you would like this form design to be processed by your municipality."></wm-label>
                                         </wm-gridcolumn>
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow59">
