added columns for Minimum Attachments and Display Message Files modified - [EditForm.html,pom.xml]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -158,6 +158,10 @@
                                                                 placeholder="" hint="This enables attaching multiple documents to a form."></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
+                                                        <wm-gridrow name="gridrow84_1" padding="unset unset 1em unset">
+                                                            <wm-gridcolumn columnwidth="4" name="gridcolumn113_1"></wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="8" name="gridcolumn114"></wm-gridcolumn>
+                                                        </wm-gridrow>
                                                         <wm-gridrow name="gridrow39" padding="unset unset 1em unset">
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn60_1" padding="unset 1em unset unset">
                                                                 <wm-label caption="Require GIS Record" name="label2"></wm-label>
