EditForm- added explanatory text to new settings. EditInspection- fixed FormNaming field presentation that got scrambled, added explanatory text to new settings. Files modified - [EditForm.html,pom.xml,EditInspection.html]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -134,11 +134,11 @@
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn55" padding="unset 1em unset unset">
                                                                 <wm-form-field displayname="Code Enforcement" show="true" primary-key="false" generator="assigned" key="codeEnforcement" type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="false"
-                                                                name="codeEnforcement"></wm-form-field>
+                                                                name="codeEnforcement" hint="This setting will classify this form as a Code Enforcement form for reporting purposes."></wm-form-field>
                                                             </wm-gridcolumn>
                                                             <wm-gridcolumn columnwidth="4" name="gridcolumn58" padding="unset 1em unset unset">
                                                                 <wm-form-field name="allowCases" displayname="Allow Cases" show="bind:Widgets.liveformUpdateFormType.formWidgets.codeEnforcement.datavalue" primary-key="false" generator="assigned" key="allowCases"
-                                                                type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="false"></wm-form-field>
+                                                                type="boolean" readonly="false" required="false" widget="checkbox" defaultvalue="false" hint="This option allows cases to be attached to the form, and will make the &quot;Cases&quot; tab appear on the form page."></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow38_1" padding="unset unset 1em unset">
