--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -729,7 +729,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow41">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn71">
-                        <wm-composite name="composite3_1" required="true" show="bind:!!Widgets.selectFormFieldType.datavalue.sqlType">
+                        <wm-composite name="composite3_1" required="true" show="bind:!!Widgets.selectFormFieldType.datavalue.sqlType || Widgets.selectFormFieldType.datavalue.label === 'Calculated'">
                             <wm-label class="col-md-3 form-control-static" name="label8" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container3_1">
                                 <wm-text name="textFormFieldLabel" maxchars="120" updateon="default"></wm-text>
@@ -761,7 +761,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow42">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn72">
-                        <wm-composite name="composite4_1" show="bind:!!Widgets.selectFormFieldType.datavalue.label &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Multi-Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Horizontal Line'">
+                        <wm-composite name="composite4_1" show="bind:!!Widgets.selectFormFieldType.datavalue.label &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Multi-Select' &amp;&amp; Widgets.selectFormFieldType.datavalue.label!=='Horizontal Line' &amp;&amp; Widgets.selectFormFieldType.datavalue.label !== 'Calculated'">
                             <wm-label class="col-md-3 form-control-static" name="label9" caption="bind:!!Widgets.selectFormFieldType.datavalue.sqlType ? 'Default Value' : 'Text'" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container4_1">
                                 <wm-text name="textDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label==='Text' || Widgets.selectFormFieldType.datavalue.label==='Header'" maxchars="1000" required="bind:Widgets.selectFormFieldType.datavalue.label === 'Header'"></wm-text>
@@ -774,6 +774,93 @@
                                 <wm-currency name="currencyDefaultValue" show="bind:Widgets.selectFormFieldType.datavalue.label === 'Currency'" step="0.01" maxvalue="1000000000000" minvalue="0"></wm-currency>
                             </wm-container>
                         </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow85">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn115_1">
+                        <wm-container name="container9" show="bind:Widgets.selectFormFieldType.datavalue.label === 'Calculated'">
+                            <wm-composite name="compositeFieldCalculator">
+                                <wm-label class="col-md-3 control-label" name="label37" caption="Calculation"></wm-label>
+                                <wm-container class="col-md-9" name="container10">
+                                    <wm-textarea name="calculatedDefault" placeholder="Enter equation" readonly="true" required="bind:Widgets.selectFormFieldType.datavalue.label === 'Calculated'"></wm-textarea>
+                                    <wm-layoutgrid name="layoutgrid23_1" columns="4">
+                                        <wm-gridrow name="gridrow89">
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn121">
+                                                <wm-button class="btn-primary btn-block" caption="÷" type="button" margin="unset 0.5em" name="buttonDivide" shortcutkey="/"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn122">
+                                                <wm-button class="btn-primary btn-block" caption="x" type="button" margin="unset 0.5em" name="buttonMultiply" shortcutkey="*"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn123">
+                                                <wm-button class="btn-primary btn-block" caption="-" type="button" margin="unset 0.5em" name="buttonMinus" shortcutkey="-"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn124">
+                                                <wm-button class="btn-primary btn-block" caption="+" type="button" margin="unset 0.5em" name="buttonPlus" shortcutkey="+"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow90">
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn125">
+                                                <wm-button class="btn-primary btn-block" caption="7" type="button" margin="unset 0.5em" name="buttonNumSeven" shortcutkey="7"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn126">
+                                                <wm-button class="btn-primary btn-block" caption="8" type="button" margin="unset 0.5em" name="buttonNumEight" shortcutkey="8"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn127">
+                                                <wm-button class="btn-primary btn-block" caption="9" type="button" margin="unset 0.5em" name="buttonNumNine" shortcutkey="9"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn128">
+                                                <wm-button class="btn-primary btn-block" caption="(" type="button" margin="unset 0.5em" name="buttonOpenParen" shortcutkey="("></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow91">
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn129">
+                                                <wm-button class="btn-primary btn-block" caption="4" type="button" margin="unset 0.5em" name="buttonNumFour" shortcutkey="4"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn130">
+                                                <wm-button class="btn-primary btn-block" caption="5" type="button" margin="unset 0.5em" name="buttonNumFive" shortcutkey="5"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn131">
+                                                <wm-button class="btn-primary btn-block" caption="6" type="button" margin="unset 0.5em" name="buttonNumSix" shortcutkey="6"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn132">
+                                                <wm-button class="btn-primary btn-block" caption=")" type="button" margin="unset 0.5em" name="buttonCloseParen" shortcutkey=")"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow92">
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn133">
+                                                <wm-button class="btn-primary btn-block" caption="1" type="button" margin="unset 0.5em" name="buttonNumOne" shortcutkey="1"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn134">
+                                                <wm-button class="btn-primary btn-block" caption="2" type="button" margin="unset 0.5em" name="buttonNumTwo" shortcutkey="2"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn135">
+                                                <wm-button class="btn-primary btn-block" caption="3" type="button" margin="unset 0.5em" name="buttonNumThree" shortcutkey="3"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn136">
+                                                <wm-button class="btn-primary btn-block" caption="" type="button" margin="unset 0.5em" name="buttonBackspace" iconclass="wi wi-backspace"></wm-button>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
+                                        <wm-gridrow name="gridrow93">
+                                            <wm-gridcolumn columnwidth="6" name="gridcolumn137">
+                                                <wm-button class="btn-primary btn-block" caption="0" type="button" margin="unset 0.5em" name="buttonNumZero" shortcutkey="0"></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn139">
+                                                <wm-button class="btn-primary btn-block" caption="." type="button" margin="unset 0.5em" name="buttonDecimalPoint" shortcutkey="."></wm-button>
+                                            </wm-gridcolumn>
+                                            <wm-gridcolumn columnwidth="3" name="gridcolumn140"></wm-gridcolumn>
+                                        </wm-gridrow>
+                                    </wm-layoutgrid>
+                                    <wm-grid title="Fields" dataset="bind:Variables.svGetCalculableFields.dataSet" navigation="Classic" name="gridFieldsForCalc">
+                                        <wm-grid-column binding="fieldName" caption="Field Name" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="label" caption="Label" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                        <wm-grid-column binding="formFieldTypes.label" caption="Type" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormFieldTypes"></wm-grid-column>
+                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                        <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                        <wm-grid-row-action key="customRow" display-name="Add" show="true" class="btn-transparent" iconclass="wi wi-settings" title="Add Field" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
+                                    </wm-grid>
+                                </wm-container>
+                            </wm-composite>
+                        </wm-container>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow45">
@@ -792,6 +879,16 @@
                             <wm-label class="col-md-3 form-control-static" name="label13" caption="Display Order" fontweight="bold"></wm-label>
                             <wm-container class="col-md-9" name="container8">
                                 <wm-text name="textFormFieldDisplayOrder" type="number" placeholder="Enter number" datavalue="bind:Variables.Cx2FormTypeFieldsData.dataSet.data.length+1" maxvalue="1234567890" minvalue="1"></wm-text>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow86">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn116_1">
+                        <wm-composite name="composite10" show="bind:Widgets.selectFormFieldType.datavalue.label === 'Number' || Widgets.selectFormFieldType.datavalue.label === 'Calculated'">
+                            <wm-label class="col-md-3 control-label" name="label38" caption="Automatic Fee Type"></wm-label>
+                            <wm-container class="col-md-9" name="container11">
+                                <wm-select name="selectAutoFeeType" placeholder="None" dataset="bind:Variables.stvAutoFeeTypes.dataSet" datafield="value" displayfield="label"></wm-select>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
